# ChangeLog for media-libs/libraw
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.66 2013/09/12 09:03:03 pinkbyte Exp $

  12 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> -libraw-0.15.2.ebuild,
  -libraw-0.15.3.ebuild:
  Vulnerable version cleanup, wrt bug #482926

  31 Aug 2013; Mikle Kolyada <zlogene@gentoo.org> libraw-0.15.4.ebuild:
  alpha stable wrt bug #482926

  31 Aug 2013; Mikle Kolyada <zlogene@gentoo.org> libraw-0.15.4.ebuild:
  sparc stable wrt bug #482926

  31 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libraw-0.15.4.ebuild:
  Stable for arm, wrt bug #482926

  29 Aug 2013; Mikle Kolyada <zlogene@gentoo.org> libraw-0.15.4.ebuild:
  amd64/ppc/ppc64/x86 stable wrt bug #482926

*libraw-0.15.4 (29 Aug 2013)

  29 Aug 2013; Tim Harder <radhermit@gentoo.org> +libraw-0.15.4.ebuild:
  Version bump (bug #482926).

  27 Aug 2013; Michael Palimaka <kensington@gentoo.org> libraw-0.15.2.ebuild,
  libraw-0.15.3.ebuild:
  Pin virtual/jpeg SLOT to 0.

  20 Aug 2013; Tim Harder <radhermit@gentoo.org> -libraw-0.14.7.ebuild,
  -libraw-0.14.8.ebuild, -files/libraw-0.14.7-pkgconfig.patch:
  Remove old.

  02 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libraw-0.15.2.ebuild:
  Stable for ppc64, wrt bug #477634

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libraw-0.15.2.ebuild:
  Stable for ppc, wrt bug #477634

  29 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libraw-0.15.2.ebuild:
  Stable for x86, wrt bug #477634

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libraw-0.15.2.ebuild:
  Stable for amd64, wrt bug #477634

*libraw-0.15.3 (16 Jul 2013)

  16 Jul 2013; Tim Harder <radhermit@gentoo.org> +libraw-0.15.3.ebuild:
  Version bump.

  29 May 2013; Tim Harder <radhermit@gentoo.org> -libraw-0.15.0.ebuild:
  Remove old.

*libraw-0.15.2 (29 May 2013)

  29 May 2013; Tim Harder <radhermit@gentoo.org> +libraw-0.15.2.ebuild:
  Security bump (bug #471694).
