@@ -3,19 +3,23 @@ Hash: SHA256
 
 AUX libraw-0.13.4-docs.patch 440 SHA256 d9807623a7d8d43deba5c89da2c320dd2badf5f6180b53b7b97ae60b55bfd84f SHA512 107c6bf01dbe694ac017b0cda8ee9b70e6b651d14f18e380399713cb038cdd45130d2b73e9e83e081ba0ccf21ca261cca0b2692e391012834d9d9ab52362cdd5 WHIRLPOOL 03baaad04afe45be8e289a68649f9c31f9762997901a881e09e80483a1da977df21f5d3126c424041060791c180d8921ea2e50ae5563a56b756078fd3256d3cb
 DIST LibRaw-0.15.4.tar.gz 1427757 SHA256 b3fcfee33bc34ae5869a9741880e28a62f029f196cb1d1a007ab156f4a110f79 SHA512 86a0c3bd8e019b415e75ef8e505e317188d8c24fdcf1aae804234e10cc3dcfd452537cc9a25a2a94f27c3b2ee70ab503af6ab189be3449b2ace3a61353fc255e WHIRLPOOL f8ef7dcb88685326348d5a713bc6c107093e3e2081dbf28e3368b8acfb30a3bafe5bcc9be7d02bd35c8f464a6b7bfb2a4070018cd0d559676c0670d4a86c82e7
+DIST LibRaw-0.16.0-Alpha2.tar.gz 710507 SHA256 6ca75ad19d193e595d2191d0d176f25c8653d2c9770a42e349bc51c61094b868 SHA512 29e1cf7975a4f3ca3a6f87581c7f41f431967a035f515a4c13debd2ac9a0612bf320f6ae3cc08310dfbf2a72ec3a379275c460c85319078ee2ff11bce96a7cdc WHIRLPOOL 1e13d0d0af41d11e15fb6db055cf4346e741ac5acb78e9bd232f8b43113ad6f32e1e91a8546c3fe5e1bf9f218546425fb5f703fad171bb1743ba7136df867c8f
 DIST LibRaw-demosaic-pack-GPL2-0.15.4.tar.gz 31271 SHA256 4c4dc9328edab4af6af7a76ea24c91c81b8181ec347016ea4697fb67c34678ba SHA512 c75c9823f5c888a81c5e8240999d3facf9a5ed9518c6c1ec93930281cfb055d93b4a44cc80f384032bdc36abc843ed75f53c1c1ee03127221d478a17d26fa0ad WHIRLPOOL 1f371dc6d74c9302b03e3264f82f224d3b6e95fb59090e0d44949a5bcfe3c6fd05cc62830c7f83b27ff9e586b2c9ccea1ccad10e8295b30bef188726f7bc04e0
+DIST LibRaw-demosaic-pack-GPL2-0.16.0-Alpha2.tar.gz 31732 SHA256 576755d29062fa3e6defa229b1d30e62fa0d292d8362afaa2fd82b1f963cb5e8 SHA512 941025b310a0c9d2faffca4cffa10283f30b22b0ca841a09b31fcb43af177ca04a249de39263efec4866efa6aebb9c3710a886da54c6126850a29028b4c029ed WHIRLPOOL dd70a8040c77f43e4579abaf88713c4cc7d625ea17e7c6dd63bbef61ab836dae7f9ddd5d31a84ec79c42742cb93723abc6c2dc9d4680570db645a8e6d199c62b
 DIST LibRaw-demosaic-pack-GPL3-0.15.4.tar.gz 38196 SHA256 1868c252ae0fc67d5a06862d93119f818a9208eef93f0e7832f6112ac6ef208a SHA512 0a369349ed11bb888d042724fe85e5c2bd3b553c68aeb6637877560f733956211201fc30940b168e06f3bfaa0f564190b1ab7b999a7a854227db4a9219874e36 WHIRLPOOL df54fc93f88862b4a736fc7500a740439cbe7ec7d897ca9fb73953d60e77e440b470270f7b5ec1fe5a5bec91e1cddbf2eac44bd262b1b1d1d1a5b3d878dbe588
+DIST LibRaw-demosaic-pack-GPL3-0.16.0-Alpha2.tar.gz 39295 SHA256 f549de9cd0e29f94170b5af8c3554a4954a172054cbeaae9ee782915239ad97a SHA512 506eb512759e770dcef91ba580e04340163d99363563523d26673b5436734042ef0ac2efcbcc9f04fd78f62757d35a5731c1e58ccf30edc0184af9dd367f109d WHIRLPOOL 642c858510f3e659ea03228e6e1bba99901c88f7486c2584a34e4b65eb9dd8368dad9c4ea8f3f50fd1cebb7cab7631c7a0c329d965f9c59fae1916b3450fc982
 EBUILD libraw-0.15.4.ebuild 1722 SHA256 fb906f9053ace2b852de273e81db0e23a6bed78ed15bc667111b9ae6fccb595b SHA512 4a1f668c42cce2dce6edf2a15349c508a171069a274bc6f02592bc5fa29420fbd4fb2c747cae2a69407bfc3b897adaec0f65e7e126b2cbf0651aaa520bbbf90e WHIRLPOOL 2b1fcfadc3d00f701bc3aa4cf7095b60c44cdb1ada825d717eed8f3a8313976bb1cefe9429b449b3f8dbe303349223e5a66bd2e466f35147f47911391cebdcd2
-MISC ChangeLog 8719 SHA256 77fd0c21a8f47d201760aace68ec3b3f79bbc94170ab030025b5b49ed9885ab3 SHA512 fe5cefebf5b8b0989a35789e9749410e8f4e76eec85af13f43131aad203b7444f8a3425b016e4eec316212bdfb033bb88aa407754561cfa2e262d0c005249e7f WHIRLPOOL 56ecb052ff36726aab4dd3620c642fe7b389bf7533c91f55840e226e826b8428f37b8032c0cecbb9a3a3b4f2241eefa1d1d5370d70120b5f3797d7164ec655ae
+EBUILD libraw-0.16.0_alpha2.ebuild 1739 SHA256 791c9b58ab19d5ef9c92ac3e8294fa1de804f4d890121e0da58421d6bf7ba517 SHA512 9e46eb6aa9dcdc855959909ba0432f9f5699e776f38a524b009b76a37bc5d3dd6c3713c5b3c878f44c9840e45582b8cb628143d1b65d964acfefcd53216ed9ed WHIRLPOOL 666c4c8367b94212f119e970d1f6a57d3ace01a41524192378580dc61b0fa1ce400154eaee6b588e23a4e12a02adb768f561294daca40b2bcb1638002e320727
+MISC ChangeLog 8867 SHA256 26a74d1dd0f6bf7c93317fb144e1a1404655a16ae75d0e5fdc6e3eaaf6995d29 SHA512 fb1d083e361051a1836697ae66340b87f67c9414275a034d649f77a931a64046f9d9735a540f3d4a393848312732278d489b47c6f4d0df0fbd90c376b4d4144a WHIRLPOOL 837fd0c990b551f6ad51b8899118cbb6934f3d857edca47bedd2308f00b53ae3042bcc187db672017d1ac0f7b5d12c60b83c088b74220b2523a3592df48d9c4f
 MISC metadata.xml 262 SHA256 6f1ac2a15c2ecd16625930728f1f9ab4b7f62533b1b8356171d2fb613afcb9f7 SHA512 6c03f109a820c23c167711f1f673f46817e683bcb68706f41ca1b49c687668b26a91412d6ac059e0b7e1768b17713f66d8332423723bd8f6fa74f9a0f73b595f WHIRLPOOL 771a0a900c3cfbb4a996475348ae522d931a484f2da1d7ef19d76b97db926d7db281cda7cab74def0bb4ddd28f01db3c22b9e77e52f76a5ccc975a24acc44c44
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSMYNMAAoJECo/aRed92674LwH/AqRYZX/miy3/8Lpw7f+Nuy0
-n+kLqXiICHADajUNG0U0sanKL5kpbFdaR+R0HajsE54C6OHfRb3MeLh1IgZiVQIz
-HeGSlXFm/b1iWouR7zvlrYDLa7M//pClfTCXekefGZoBFgQcvVLWRIDBOAbJ2A74
-hXpL4Iar7ebIDua3bYWNzU7LW/tWZUYrHb4ODlwpZbJwoYLJ79PD54PfwkVY+8Rc
-LgxxOF097Arcd+HfBkharAk5P0QpC8HjGr5Se3oWAX9L/77QYD4JzdZRI6ZSSJJq
-YZJrtUZ9P/2QxcbMd980rpLlDTLNOejor7MAzwaFwnHLGBNWjSq1bcazAbDimZA=
-=dxx9
+iQEcBAEBCAAGBQJSYKOTAAoJEEqz6FtPBkyjDcYH/34Mcf7tCg0FzVedUttSnvPJ
+Fgkl9HIISrTFlXf7tIZoF+aTQz7P1zFLMm1uA8PJCXRvjDWv12jyUCpsMM+itOGc
+5D2alCCy9/IZ6sQMIHJw6VfH4T1qNQOzIN8CyByzcN4/tbPZbVmgqLXEeMXCabnn
+i1VIRwUkNVMuvmIJu97dNsjOh+D7uwYryTr/PAZvy3N1pfzu6BXnJefqdVdPOCWK
+4QLPjKkfQ9ayhPNb+zNEL2Ky4sHGlOmog6wohhaqRR3U7rOkTylzIBgWQmUF6Sq3
+0FNHqf+u8mepNMGMQFbRT/hYHroLdYguBX3XbdZ25S1JUoDE7ZBa/1U9gjykkb0=
+=xx77
 -----END PGP SIGNATURE-----
