@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install prepare pretend
+DEPEND=jpeg? ( virtual/jpeg:0 ) jpeg2k? ( media-libs/jasper ) lcms? ( media-libs/lcms:2 ) virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=LibRaw is a library for reading RAW files obtained from digital photo cameras
+EAPI=5
+HOMEPAGE=http://www.libraw.org/
+IUSE=demosaic examples jpeg jpeg2k +lcms openmp static-libs
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux
+LICENSE=LGPL-2.1 CDDL GPL-2 GPL-3
+RDEPEND=jpeg? ( virtual/jpeg:0 ) jpeg2k? ( media-libs/jasper ) lcms? ( media-libs/lcms:2 )
+SLOT=0/10
+SRC_URI=http://www.libraw.org/data/LibRaw-0.16.0-Alpha2.tar.gz demosaic? ( http://www.libraw.org/data/LibRaw-demosaic-pack-GPL2-0.16.0-Alpha2.tar.gz http://www.libraw.org/data/LibRaw-demosaic-pack-GPL3-0.16.0-Alpha2.tar.gz )
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=a1ad8b26be31cd64bea4dbf688756794
