@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8308 2013/10/15 06:01:06 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8309 2013/10/18 02:54:59 radhermit Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  18 Oct 2013; Tim Harder <radhermit@gentoo.org> package.mask:
+  Mask =media-libs/libraw-0.16* for testing.
 
   15 Oct 2013; Pacho Ramos <pacho@gentoo.org> targets/systemd/use.mask:
   Add reference for consolekit vs logind
