@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libraw
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.66 2013/09/12 09:03:03 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.67 2013/10/18 02:57:19 radhermit Exp $
+
+*libraw-0.16.0_alpha2 (18 Oct 2013)
+
+  18 Oct 2013; Tim Harder <radhermit@gentoo.org> +libraw-0.16.0_alpha2.ebuild:
+  Version bump (bug #488302).
 
   12 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> -libraw-0.15.2.ebuild,
   -libraw-0.15.3.ebuild:
